--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -6,7 +6,7 @@
     background-position: center;
     background-attachment: fixed;
     padding: 4rem 5%;
-    color: var(--white);
+    color: white;
     text-align: center;
     font-family: 'Poppins', sans-serif;
     position: relative;
