--- a/assets/css/profile.css
+++ b/assets/css/profile.css
@@ -1,8 +1,4 @@
 /* General Styling for Profile Page */
-body {
-    background-color: #c5cee6; /* Same background color as packages page */
-}
-
 .profile {
     padding: 5rem 10%;
     background-color: var(--main-color); /* Ensure this matches */
@@ -57,15 +53,7 @@ body {
 .profile-table td {
     padding: 10px;
     text-align: left;
-}
-
-.profile-table th {
-    background-color: var(--main-color);
-    color: var(--white);
-}
-
-.profile-table tr:nth-child(even) {
-    background-color: #f9f9f9;
+    color: var(--black);
 }
 
 /* Update Profile Button */
@@ -103,8 +91,7 @@ body {
 }
 
 .user-bookings th {
-    background-color: var(--main-color);
-    color: var(--white);
+    color: var(--black);
 }
 
 .user-bookings td {
