--- a/assets/css/total_cost.css
+++ b/assets/css/total_cost.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-color: var(--main-color);    
+    background-color: var(--main-color);
     color: var(--black);
 }
 
@@ -25,7 +25,7 @@ body {
 
 h2 {
     font-size: 2.5rem;
-    color: var(--black);    
+    color: var(--black);
     text-align: center;
     margin-bottom: 2rem;
 }
@@ -34,7 +34,7 @@ h2 {
 .booking-details {
     margin-bottom: 2rem;
     font-size: 1.5rem;
-    color: var(--black);
+    color:var(--black);
     text-align: center;
 }
 
@@ -50,7 +50,7 @@ h2 {
 /* Confirm Button */
 button, .btn {
     background-color: var(--tomato);
-    color: var(--black);
+    color: white;
     padding: 1rem 2rem;
     text-decoration: none;
     border-radius: 5px;
@@ -61,7 +61,7 @@ button, .btn {
 }
 
 button:hover, .btn:hover {
-    background-color: var(--main-color);
+    background-color: var(--black);
     transform: scale(1.05);
 }
 
