--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -200,7 +200,7 @@
 /* Facilities Section */
 .facilities {
     padding: 5rem 10%;
-    background: var(--light-bg);
+    background: var(--main-color);
     text-align: center;
 }
 
@@ -224,7 +224,7 @@
 }
 
 .facilities ul li a {
-    color: var(--main-color);
+    color: var(--black);
     transition: 0.3s;
 }
 
