--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -9,11 +9,11 @@
 }
 
 body {
-    background-color: #c5cee6; /* Matching the background color of the project */
+    background-color: #c5cee6; 
     color: #333;
     display: flex;
     flex-direction: column;
-    min-height: 100vh; /* Ensures body takes full height */
+    min-height: 100vh;
 }
 
 .container {
@@ -82,7 +82,7 @@ body {
 }
 
 .btn:hover {
-    background-color: #c35427; /* Darker shade of tomato on hover */
+    background-color: #c35427; 
 }
 
 /* Error Message Styling */
@@ -135,7 +135,7 @@ footer {
 }
 
 .btn-admin {
-    background-color: #007bff; /* Blue color */
+    background-color: #007bff; 
     color: white;
     font-size: 1.5rem;
     padding: 15px;
@@ -147,11 +147,11 @@ footer {
     transition: 0.3s ease;
     display: inline-block;
     text-align: center;
-    text-decoration: none; /* Remove underline from link */
+    text-decoration: none; 
 }
 
 .btn-admin:hover {
-    background-color: #0056b3; /* Darker shade of blue on hover */
+    background-color: #0056b3; 
 }
 
 /* Responsive Design */
