--- a/assets/css/update_profile.css
+++ b/assets/css/update_profile.css
@@ -7,12 +7,12 @@
     outline: none;
 }
 body {
-    background-color: #c5cee6; /* Same background color as packages page */
+    background-color: #c5cee6; 
 }
 
 .update-profile {
     padding: 5rem 10%;
-    background-color: var(--main-color); /* Ensure this matches */
+    background-color: var(--main-color); 
     color: var(--black);
     margin-top: 90px; /* To prevent overlap with the fixed header */
 }
